# jira-cli

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
src/: auth.rs  main.rs
