[package]
name = "jira-cli"
description = "A command line client for JIRA Cloud"
readme = "README.md"
license-file = "LICENSE"
categories = ["command-line-utilities"]
version = "0.1.0"
authors = ["Peter <peter@ptrbrynt.com>"]
edition = "2018"

[dependencies]
clap = { version = "3.0.0-beta.1" }
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
base64 = { version = "0.12.3" }
